# LST

./: .gitignore  EXPERIMENT_LOG.md  README.md  TESTS.md  pyproject.toml
.github/workflows/: ci.yml
ColabTest/: longbench.ipynb
checkpoints/: jpkv_ppl_best.pt
configs/training/: default.yaml
notebooks/: longbench.ipynb
results/: longbench_dense.json  longbench_h2o.json  longbench_pyramidkv.json  ppl_tinyllama_100samples.json  ppl_tinyllama_baselines.txt  zeroshot_dense.json
scripts/: collect_trajectories.py  train_sidecar.py
scripts/benchmark/: __init__.py  eval_longbench.py  eval_niah.py  eval_perplexity.py  eval_zeroshot.py
scripts/collection/: __init__.py  collect_data.py
scripts/train/: __init__.py  train_lst.py
src/LST/: __init__.py  config.py
src/LST/losses/: __init__.py  combined.py  diversity.py  ppl.py  query_probing.py
src/LST/sidecar/: __init__.py  network.py
src/LST/training/: __init__.py  dataset.py  trainer.py
src/baselines/: __init__.py  base.py  cam.py  h2o.py  kvmerger.py  pyramidkv.py  snapkv.py  streaming.py  tome.py  tova.py  weightedkv.py
src/fmkv/data/: __init__.py  multi_window_dataset.py  trajectory.py
src/fmkv/evaluation/benchmarks/: __init__.py  generation.py
src/fmkv/evaluation/methods/: fmkv.py
src/fmkv/kernels/: __init__.py  attention_jacobian.py  triton_jacobian.py
src/fmkv/losses/: force_matching.py
src/fmkv/sidecar/: network.py
src/fmkv/training/: trainer.py
tests/: __init__.py  test_kernels.py  test_losses.py  test_lst.py
