[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lst"
version = "0.2.0"
description = "Learned Super-Token KV Cache Compression for LLM Inference"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Anonymous", email = "anonymous@icml.cc"}
]
keywords = [
    "transformers",
    "kv-cache",
    "compression",
    "super-token",
    "llm-inference",
    "attention"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "datasets>=2.16.0",
    "safetensors>=0.4.0",
    "einops>=0.7.0",
    "triton>=2.1.0",
    "wandb>=0.16.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "jaxtyping>=0.2.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
eval = [
    "lm-eval>=0.4.0",
    "nltk>=3.8.0",
    "rouge-score>=0.1.2",
]
all = ["lst[dev,eval]"]

[project.urls]
Repository = "https://github.com/anonymous/lst"
Documentation = "https://github.com/anonymous/lst#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["LST", "baselines"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["LST", "baselines"]
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

